--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,14 @@
         <contributor>
             <name>Joe Hohertz</name>
         </contributor>
+        <contributor>
+            <name>Chase Berry</name>
+        </contributor>
     </contributors>
     <properties>
-        <metrics.version>4.0.2</metrics.version>
-        <jackson.version>2.9.6</jackson.version>
-        <dropwizard.version>1.3.4</dropwizard.version>
+        <metrics.version>4.2.0</metrics.version>
+        <jackson.version>2.13.0</jackson.version>
+        <dropwizard.version>2.0.25</dropwizard.version>
     </properties>
     <build>
         <plugins>
@@ -159,12 +162,12 @@
             <dependency>
                 <groupId>com.datadoghq</groupId>
                 <artifactId>java-dogstatsd-client</artifactId>
-                <version>2.6.1</version>
+                <version>3.0.0</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.12</version>
+                <version>4.13.2</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -182,7 +185,7 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
-                <version>1.7.25</version>
+                <version>1.7.32</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
