--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
         </license>
     </licenses>
     <scm>
-        <connection>scm:git:git@github.com:coursera/metrics-datadog.git</connection>
-        <developerConnection>scm:git:git@github.com:coursera/metrics-datadog.git</developerConnection>
-        <url>scm:git@github.com:coursera/metrics-datadog.git</url>
+        <connection>scm:git:git@github.com:chaseberry/metrics-datadog.git</connection>
+        <developerConnection>scm:git:git@github.com:chaseberry/metrics-datadog.git</developerConnection>
+        <url>scm:git:git@github.com:chaseberry/metrics-datadog.git</url>
     </scm>
     <developers>
         <developer>
