--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>metrics-datadog</artifactId>
     <version>2.0.0-RC2</version>
     <packaging>pom</packaging>
-    <name>Datadog Metrics Parent</name>
+    <name>Datadog Metrics</name>
     <url>https://github.com/chaseberry/metrics-datadog</url>
 
     <modules>
